Add cognito user and admin details to rbac can write (#119)
* Add authentication check for API

* fix

* Add authorization to the API

* add authorization to socketio

* fix existing unit tests and add a new type of test

* Add tests for authentication

* fix-typo

* Fix documentation

* learn to spell unauthenticated

* debug

* more-debug

* Suppress missing X-Ray context errors for auth middleware lookups

* fix-error

* Fix canWrite type issues

* Throw if experiment does not have rbac_can_write

* Fix broken merge

* Add create experiment endpoint to avoid error message experiment not found  when creating new experiment

* Add user permissions to saved experiment

* Add adminArn

* Clear out repetitions before setting rbac_can_write

* Remove extra console logs

* Test fixes

* Add 401 and 403 responses to enabled options

* Rename new auth middleware

* Move adminArn into config
