# src/api/routes/experiment.js
@@ -1,5 +1,6 @@
 const ExperimentService = require('../route-services/experiment');
-const { expressAuthorizationMiddleware } = require('../../utils/authMiddlewares');
+
+const { expressAuthorizationMiddleware, expressAuthenticationOnlyMiddleware } = require('../../utils/authMiddlewares');
 
 const experimentService = new ExperimentService();
 
@@ -8,6 +9,14 @@ module.exports = {
     expressAuthorizationMiddleware,
     (req, res, next) => {
       experimentService.getExperimentData(req.params.experimentId)
+        .then((data) => res.json(data))
+        .catch(next);
+    },
+  ],
+  'experiment#createExperiment': [
+    expressAuthenticationOnlyMiddleware,
+    (req, res, next) => {
+      experimentService.createExperiment(req.params.experimentId, req.body, req.user)
         .then((data) => res.json(data))
         .catch(next);
     },
